style: fix overflow of messages forced to be on one line

--- a/src/components/Message/Message.module.css
+++ b/src/components/Message/Message.module.css
@@ -2,7 +2,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  width: max-content;
+  max-width: 50%;
   gap: 0.5rem;
 }
 
@@ -10,7 +10,7 @@
   border-radius: 2rem;
   padding: 0.5rem 1rem;
   background-color: white;
-  width: max-content;
+  width: 100%;
 }
 
 .sender {
